# goon

./: .clangd  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  basic.cpp
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  gl.hpp  goon.cpp  goon.hpp  mesh.cpp  mesh.hpp  point.hpp  shader_manager.cpp  shader_manager.hpp  shader_type.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  window.cpp  window.hpp
src/mesh/: mesh.cpp  mesh.hpp  point.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/shader/: shader_manager.cpp  shader_manager.hpp  shader_type.hpp
src/window/: window.cpp  window.hpp
